--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@ at the end*/
         
         <link rel="stylesheet" href="../build/public.css"> 
 
-        <script defer src=""></script>
+        <script defer src="../build/dataviz-finance-gironde-fr-bundle.script"></script>
 
     </head>
 
